[package]
name = "kvm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime & networking
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal", "fs"] }
axum  = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
hyper = "1"

# DBus
zbus = { version = "4", features = ["tokio"] }

# VNC / frame encoding
vnc-rs = "0.5"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Utilities
bytes = "1"
image = "0.25"
anyhow = "1.0"

# TLS/SSL support for encrypted VNC
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
rcgen = "0.13"

# V4L2 support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true

